# backend/controllers/nametitle_controller.go
@@ -1,6 +1,7 @@
 package controllers
 
 import (
+	"fmt"
 	"context"
 	"strconv"
 
@@ -130,6 +131,84 @@ func (ctl *NameTitleController) ListNameTitle(c *gin.Context) {
 	c.JSON(200, nametitles)
 }
 
+// DeleteNameTitle handles DELETE requests to delete a nametitle entity
+// @Summary Delete a nametitle entity by ID
+// @Description get nametitle by ID
+// @ID delete-nametitle
+// @Produce  json
+// @Param id path int true "NameTitle ID"
+// @Success 200 {object} gin.H
+// @Failure 400 {object} gin.H
+// @Failure 404 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /nametitles/{id} [delete]
+func (ctl *NameTitleController) DeleteNameTitle(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	err = ctl.client.NameTitle.
+		DeleteOneID(int(id)).
+		Exec(context.Background())
+	if err != nil {
+		c.JSON(404, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	c.JSON(200, gin.H{"result": fmt.Sprintf("ok deleted %v", id)})
+}
+
+// UpdateNameTitle handles PUT requests to update a nametitle entity
+// @Summary Update a nametitle entity by ID
+// @Description update nametitle by ID
+// @ID update-nametitle
+// @Accept   json
+// @Produce  json
+// @Param id path int true "NameTitle ID"
+// @Param nametitletype body ent.NameTitle true "NameTitle entity"
+// @Success 200 {object} ent.NameTitle
+// @Failure 400 {object} gin.H
+// @Failure 500 {object} gin.H
+// @Router /nametitles/{id} [put]
+func (ctl *NameTitleController) UpdateNameTitle(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": err.Error(),
+		})
+		return
+	}
+
+	obj := ent.NameTitle{}
+	if err := c.ShouldBind(&obj); err != nil {
+		c.JSON(400, gin.H{
+			"error": "nametitle binding failed",
+		})
+		return
+	}
+	obj.ID = int(id)
+	fmt.Println(obj.ID)
+	n, err := ctl.client.NameTitle.
+		UpdateOneID(int(id)).
+		SetName(obj.Name).
+		Save(context.Background())
+	if err != nil {
+		c.JSON(400, gin.H{
+			"error": "update failed",
+		})
+		return
+	}
+
+	c.JSON(200, n)
+}
+
+
 // NewNameTitleController creates and registers handles for the nametitle controller
 func NewNameTitleController(router gin.IRouter, client *ent.Client) *NameTitleController {
 	nc := &NameTitleController{
@@ -146,4 +225,6 @@ func (ctl *NameTitleController) register() {
 	nametitles.GET("", ctl.ListNameTitle)
 	nametitles.POST("", ctl.CreateNameTitle)
 	nametitles.GET(":id", ctl.GetNameTitle)
+	nametitles.PUT("id", ctl.UpdateNameTitle)
+	nametitles.DELETE(":id", ctl.DeleteNameTitle)
 }
